<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingTop="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your Interests"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/interest_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_1"/>
        <CheckBox
            android:id="@+id/interest_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/interest_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_3"/>
        <CheckBox
            android:id="@+id/interest_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/interest_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_5"/>
        <CheckBox
            android:id="@+id/interest_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_6"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/interest_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_7"/>
        <CheckBox
            android:id="@+id/interest_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_8"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/interest_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_9"/>
        <CheckBox
            android:id="@+id/interest_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_10"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/interest_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_11"/>
        <CheckBox
            android:id="@+id/interest_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_12"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/interest_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_13"/>
        <CheckBox
            android:id="@+id/interest_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_14"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/interest_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_15"/>
        <CheckBox
            android:id="@+id/interest_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_16"/>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_interest"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Next"
        android:textColor="@color/white"
        app:cornerRadius="32dp"/>

<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/register_interest_later"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="60dp"-->
<!--        android:text="Maybe Later"-->
<!--        android:textColor="@color/white"-->
<!--        app:cornerRadius="32dp"/>-->

</LinearLayout>